[package]
name = "tai"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

